fix form input css on mobile

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,6 +1,3 @@
-$padding: 50px;
-$borders: 15px;
-
 /* The point where the layout should change */
 $desktop: 840px;
 $medium: 700px;
