--- a/css/style.scss
+++ b/css/style.scss
@@ -29,7 +29,6 @@ body {
   max-width: 100%;
   max-height: 100%;
   margin: 0;
-  padding: $padding;
 
   .title {
     font-family: 'Open Sans';
@@ -64,6 +63,14 @@ body {
 
       @include desktop {
         width: 100%;
+      }
+
+      @include medium {
+        max-width: 85%;
+      }
+
+      @include small {
+        max-width: 90%;
       }
     }
 
@@ -113,85 +120,85 @@ body {
     color: color(text);
     opacity: 0.8;
   }
-}
 
-.city-display {
-  margin: 50px 0 20px;
-
-  .city {
-    position: relative;
-    padding: 20px 10%;
-    border-radius: 20px;
-    background: color(text);
-    color: color(primary);
-    text-transform: uppercase;
-
-    &:after {
-      content: "";
-      width: 90%;
-      height: 50px;
-      position: absolute;
-      bottom: -12px;
-      left: 5%;
-      z-index: -1;
-      opacity: 0.3;
+  .city-display {
+    margin: 50px 0 20px;
+  
+    .city {
+      position: relative;
+      padding: 20px 10%;
       border-radius: 20px;
       background: color(text);
-    }
-  }
-  
-  .cities {
-    list-style: none;
-    display: grid;
-    grid-gap: 32px 20px;
-    grid-template-columns: repeat(4, 1fr);
-
-    span {
-      font-family: 'Open Sans';
-    }
-
-    figcaption {
-      font-family: 'Open Sans';
-      margin-top: 10px;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      text-align: center;
-    }
-     
-    .city-temperature {
-      font-family: 'Open Sans';
-      font-size: 5rem;
-      font-weight: bold;
-      margin-top: 10px;
-      color: var(--text_dark);
-    }
-     
-    .city sup {
-      font-family: 'Open Sans';
-      font-size: 0.5em;
-      font-weight: 600;
-    }
-     
-    .city-name sup {
-      font-family: 'Open Sans';
-      padding: 0.3em 0.6em;
-      border-radius: 20px;
       color: color(primary);
-      background: color(secondary-dark);
-    }
-     
-    .city-icon {
-      margin-top: 10px;
-      width: 100px;
-      height: 100px;
-    }
-
-    @include medium {
-      grid-template-columns: repeat(2, 1fr);
+      text-transform: uppercase;
+  
+      &:after {
+        content: "";
+        width: 90%;
+        height: 50px;
+        position: absolute;
+        bottom: -12px;
+        left: 5%;
+        z-index: -1;
+        opacity: 0.3;
+        border-radius: 20px;
+        background: color(text);
+      }
     }
     
-    @include small {
-      grid-template-columns: repeat(1, 1fr);
+    .cities {
+      list-style: none;
+      display: grid;
+      grid-gap: 32px 20px;
+      grid-template-columns: repeat(4, 1fr);
+  
+      span {
+        font-family: 'Open Sans';
+      }
+  
+      figcaption {
+        font-family: 'Open Sans';
+        margin-top: 10px;
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+        text-align: center;
+      }
+       
+      .city-temperature {
+        font-family: 'Open Sans';
+        font-size: 5rem;
+        font-weight: bold;
+        margin-top: 10px;
+        color: var(--text_dark);
+      }
+       
+      .city sup {
+        font-family: 'Open Sans';
+        font-size: 0.5em;
+        font-weight: 600;
+      }
+       
+      .city-name sup {
+        font-family: 'Open Sans';
+        padding: 0.3em 0.6em;
+        border-radius: 20px;
+        color: color(primary);
+        background: color(secondary-dark);
+      }
+       
+      .city-icon {
+        margin-top: 10px;
+        width: 100px;
+        height: 100px;
+      }
+  
+      @include medium {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      
+      @include small {
+        grid-template-columns: repeat(1, 1fr);
+      }
     }
   }
 }
